Fixed bug with expandable list items that didn't expand/collapse correctly

--- a/source/css/scss-altinnett/objects/_collapse.scss
+++ b/source/css/scss-altinnett/objects/_collapse.scss
@@ -21,3 +21,11 @@
     margin-left: -26px;
   }
 }
+
+.an-collapse-button {
+  top: 0;
+  height: 100%;
+  @include media-breakpoint-up( md ) {
+    padding: 12px 6px;
+  }
+}
